# risco-lume-Galicia

./: agents.md
Android/: gradle.properties  local.properties.example  settings.graddle.kts
Android/app/: build.gradle.kts
Backend/: pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
